// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skills renders correctly with a single category 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c9 {
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  display: inline-block;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c0 {
  padding: 3rem 0;
}

.c3 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c6 {
  display: grid;
  gap: 2rem;
  grid-template-columns: 1fr;
}

.c7 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  margin: 0 0 1rem;
  text-transform: uppercase;
}

.c8 {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (max-width: 1199px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: 2rem;
  }
}

@media (max-width: 1199px) {
  .c5 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 900px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c6 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
    id="skills"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Skills
      </p>
      <h2
        class="c4 c5"
      >
        What I work with
      </h2>
      <div
        class="c6"
      >
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Frontend
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              React
            </li>
            <li
              class="c9"
            >
              Next.js
            </li>
            <li
              class="c9"
            >
              TypeScript
            </li>
          </ul>
        </div>
      </div>
    </section>
  </section>
</div>
`;

exports[`Skills renders correctly with all categories 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c9 {
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  display: inline-block;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c0 {
  padding: 3rem 0;
}

.c3 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c6 {
  display: grid;
  gap: 2rem;
  grid-template-columns: 1fr;
}

.c7 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  margin: 0 0 1rem;
  text-transform: uppercase;
}

.c8 {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (max-width: 1199px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: 2rem;
  }
}

@media (max-width: 1199px) {
  .c5 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 900px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c6 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
    id="skills"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Skills
      </p>
      <h2
        class="c4 c5"
      >
        What I work with
      </h2>
      <div
        class="c6"
      >
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Languages & Frameworks
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              React
            </li>
            <li
              class="c9"
            >
              Next.js
            </li>
            <li
              class="c9"
            >
              TypeScript
            </li>
            <li
              class="c9"
            >
              JavaScript
            </li>
            <li
              class="c9"
            >
              Redux
            </li>
            <li
              class="c9"
            >
              Vue.js
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Commerce & CMS
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              Shopify
            </li>
            <li
              class="c9"
            >
              BigCommerce
            </li>
            <li
              class="c9"
            >
              Prismic
            </li>
            <li
              class="c9"
            >
              Contentful
            </li>
            <li
              class="c9"
            >
              Algolia
            </li>
            <li
              class="c9"
            >
              headless WordPress
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Shopify App Stack
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              Remix
            </li>
            <li
              class="c9"
            >
              Prisma
            </li>
            <li
              class="c9"
            >
              Shopify Polaris
            </li>
            <li
              class="c9"
            >
              Liquid
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Tooling & Testing
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              Storybook
            </li>
            <li
              class="c9"
            >
              Chromatic
            </li>
            <li
              class="c9"
            >
              Jest
            </li>
            <li
              class="c9"
            >
              Sentry
            </li>
            <li
              class="c9"
            >
              Webpack
            </li>
            <li
              class="c9"
            >
              Node.js
            </li>
            <li
              class="c9"
            >
              Git
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c7"
          >
            Practices
          </h3>
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              Frontend Architecture
            </li>
            <li
              class="c9"
            >
              Design Systems
            </li>
            <li
              class="c9"
            >
              Core Web Vitals
            </li>
            <li
              class="c9"
            >
              WCAG 2.1 AA
            </li>
            <li
              class="c9"
            >
              Tech Leadership
            </li>
          </ul>
        </div>
      </div>
    </section>
  </section>
</div>
`;
